Write string instead of bytes